--- a/ue_mongo/src/assets/css/common.less
+++ b/ue_mongo/src/assets/css/common.less
@@ -10,18 +10,13 @@
   width: calc(75% - 16px);
   background-color:rgb(240, 243, 246) !important;
 }
-.tmw-filter {
-  > .tmw-filter__inputWithSelect {
-    width: 350px;
-  }
-  > .tmw-filter__button {
-    margin-left: auto !important;
-  }
-}
 .tmw-tags {
   display: flex;
   flex-wrap: wrap;
-  margin: 5px 0;
+	margin: 5px 0;
+	.el-tag + .el-tag {
+		margin-left: 10px;
+	}
 }
 .tmw-pagination {
   margin-top: 5px;
