modify button text

--- a/ue_mongo/src/assets/css/common.less
+++ b/ue_mongo/src/assets/css/common.less
@@ -10,6 +10,14 @@
   width: calc(75% - 16px);
   background-color:rgb(240, 243, 246) !important;
 }
+.tms-table {
+	/deep/ .el-table__fixed-right {
+		height: 100% !important;
+	}
+	/deep/ .el-table__fixed {
+		height: 100% !important;
+	}
+}
 .tmw-tags {
   display: flex;
   flex-wrap: wrap;
