modify attreditor method

--- a/ue_mongo/src/assets/css/common.less
+++ b/ue_mongo/src/assets/css/common.less
@@ -26,6 +26,20 @@
 		margin-left: 10px;
 	}
 }
+.tmw-attr-form {
+  padding: 10px;
+  background: #f5f5f5;
+  box-sizing: border-box;
+	.el-form-item {
+		margin-bottom: 22px;
+		.el-form-item__label {
+			float: left;
+		}
+	}
+	.el-form-item:last-child {
+		display: none;
+	}
+}
 .tmw-pagination {
   margin-top: 5px;
   > .tmw-pagination__text {
