--- a/ue_mongo/src/assets/css/common.less
+++ b/ue_mongo/src/assets/css/common.less
@@ -42,6 +42,7 @@
 }
 .tmw-pagination {
   margin-top: 5px;
+  display: flex;
   > .tmw-pagination__text {
     display: inline-block;
     padding-left: 5px;
