修改表格展示以及导入空数据报错升级

--- a/ue_admin/src/assets/css/common.less
+++ b/ue_admin/src/assets/css/common.less
@@ -27,3 +27,17 @@
 .mzindex{ 
   z-index: 9999 !important; 
 }
+
+.schema-editor {
+  #pane-properties {
+    overflow-x: auto;
+    >.tms-flex_gap_2 {
+      width: 1000px;
+      height: 270px;
+      >div, form {
+        height: 100%;
+        overflow-y: auto;
+      }
+    }
+  }
+}
