完善文档选择框

--- a/ue_mongo/src/assets/css/element-ui.less
+++ b/ue_mongo/src/assets/css/element-ui.less
@@ -5,7 +5,7 @@
   background-color: #fff;
 }
 .el-pagination {
-  margin-left: auto !important
+  margin-left: auto !important;
 }
 .el-dialog__body {
   height: 400px;
