--- a/ue_admin/src/assets/css/common.less
+++ b/ue_admin/src/assets/css/common.less
@@ -13,6 +13,15 @@
   background-color: #f0f3f6 !important;
 }
 
+// 右侧按钮
+.tms-frame__main__right__button {
+  .el-button + .el-button {
+    margin-left: 0;
+  }
+  overflow-y: auto;
+  height: calc(100vh - 64px);
+}
+
 // 表格样式高度塌陷
 .table-fixed {
   /deep/ .el-table__fixed-right {
@@ -23,18 +32,35 @@
   }
 }
 
+// 分页器
+.tmw-pagination {
+  margin-top: 5px;
+  display: flex;
+  justify-content: space-between;
+  > .tmw-pagination__text {
+    padding-left: 5px;
+    font-size: 13px;
+    height: 28px;
+    line-height: 28px;
+    vertical-align: top;
+    color: #606266;
+    letter-spacing: 3px;
+  }
+}
+
 // message提示自定义类名
-.mzindex{ 
-  z-index: 9999 !important; 
+.mzindex {
+  z-index: 9999 !important;
 }
 
 .schema-editor {
   #pane-properties {
     overflow-x: auto;
-    >.tms-flex_gap_2 {
+    > .tms-flex_gap_2 {
       width: 1000px;
       height: 270px;
-      >div, form {
+      > div,
+      form {
         height: 100%;
         overflow-y: auto;
       }
