--- a/ue_mongo/src/assets/css/common.less
+++ b/ue_mongo/src/assets/css/common.less
@@ -8,43 +8,43 @@
 }
 .tms-frame__main__center {
   width: calc(75% - 16px);
-  background-color:rgb(240, 243, 246) !important;
+  background-color: rgb(240, 243, 246) !important;
 }
 .tms-table {
-	/deep/ .el-table__fixed-right {
-		height: 100% !important;
-	}
-	/deep/ .el-table__fixed {
-		height: 100% !important;
-	}
+  /deep/ .el-table__fixed-right {
+    height: 100% !important;
+  }
+  /deep/ .el-table__fixed {
+    height: 100% !important;
+  }
 }
 .tmw-tags {
   display: flex;
   flex-wrap: wrap;
-	margin: 5px 0;
-	.el-tag + .el-tag {
-		margin-left: 10px;
-	}
+  margin: 5px 0;
+  .el-tag + .el-tag {
+    margin-left: 10px;
+  }
 }
 .tmw-attr-form {
   padding: 10px;
   background: #f5f5f5;
   box-sizing: border-box;
-	.el-form-item {
-		margin-bottom: 22px;
-		.el-form-item__label {
-			float: left;
-		}
-	}
-	.el-form-item:last-child {
-		display: none;
-	}
+  .el-form-item {
+    margin-bottom: 22px;
+    .el-form-item__label {
+      float: left;
+    }
+  }
+  .el-form-item:last-child {
+    display: none;
+  }
 }
 .tmw-pagination {
   margin-top: 5px;
   display: flex;
+  justify-content: space-between;
   > .tmw-pagination__text {
-    display: inline-block;
     padding-left: 5px;
     font-size: 13px;
     height: 28px;
@@ -55,5 +55,5 @@
   }
 }
 .mzindex {
-	z-index: 9999 !important;
+  z-index: 9999 !important;
 }
