--- a/ue_mongo/src/assets/css/element-ui.less
+++ b/ue_mongo/src/assets/css/element-ui.less
@@ -5,3 +5,15 @@
   height: 400px;
   overflow-y: auto;
 }
+.el-message {
+  max-width: 50%;
+  .el-message__content {
+    width: 100%;
+    overflow: hidden;
+  }
+  &.is-closable {
+    .el-message__content {
+      margin-right: 16px;
+    }
+  }
+}
